test/reusable/error/eval_selmem_child1.bfr
# parent:child のchildがindexである
# : と @ は統合するかもしれない
#   統合するとエラーではなくなる

main {
  a: array(3) {
    i: index;
  };
} [
  + a:i
]